--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -101,8 +101,15 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 ## 📱 React-Native {#react-native}
 
+[![Custom Apple Settings UI with Expo](/emails/issues/161/exposettings.jpg)](https://evanbacon.dev/blog/apple-settings)
+
+[**Custom Apple Settings UI with Expo**](https://evanbacon.dev/blog/apple-settings)
+
+Evan rappelle les quelques avantages d'utiliser l'écran settings iOS. C'est pénible à implémenter nativement, et le ROI est faible, mais son Expo Config Plugin simplifie la tâche. Il explique comment toggle le son d'une app ou encore automatiser l'affichage des licenses logicielles.
+
+---
+
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
-- 📜 [Custom Apple Settings UI with Expo](https://evanbacon.dev/blog/apple-settings): Evan rappelle les quelques avantages d'utiliser l'écran natif de settings iOS. C'est difficile à implémenter nativement, et le ROI est faible, mais son Expo Config Plugin simplifie la tâche. Il explique comment toggle le son d'une app ou encore automatiser l'affichage des licenses logicielles.
 - 📜 [Expo EAS - Support for XCode 15 and iOS 17](https://expo.dev/changelog/2023/09-28-new-xcode-ios) https://twitter.com/expo/status/1707860316661653987
 - 📖 [Expo Docs - Continuous Native Generation (CNG)](https://docs.expo.dev/workflow/continuous-native-generation/): présente l'idée de générer les plateformes natives en continu l'intérêt de cette pratique.
 - 📦 [create-react-native-library v0.34 - local library support](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.34.0): il est maintenant très facile de générer une librairie locale en React-Native vanilla. À noter qu'Expo le supporte aussi. https://twitter.com/satya164/status/1708769857309720652
