--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/161/index.mdx
@@ -10,7 +10,7 @@ Salut à tous !
 
 Cette semaine j'ai trouvé l'écosystème React plutôt calme, mais on a quelques articles assez sympa à lire.
 
-Le progressive enhancement est à l'honneur aussi bien coté Remix que Next.js!
+Le progressive enhancement React est à l'honneur aussi bien coté Remix que Next.js!
 
 <!-- truncate -->
 
