--- a/website/newsletter/161/index.mdx
+++ b/website/newsletter/161/index.mdx
@@ -8,9 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-Cette semaine j'ai trouvé l'écosystème React plutôt calme, mais on a quelques articles assez sympa à lire.
+This week I've found the React ecosystem rather quiet, but we've got some pretty cool articles to read.
 
-Le progressive enhancement est à l'honneur aussi bien coté Remix que Next.js!
+React progressive enhancement is in the spotlight in both Remix and Next.js!
 
 <!-- truncate -->
 
