--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
@@ -8,7 +8,9 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Podcast avec melvyn https://podcasters.spotify.com/pod/show/du-code-et-du-cash/episodes/Vivre-de-sa-newsletter-React---2-Sebastien-Lorber-e2a9unj
+
+- video https://www.youtube.com/watch?v=bwpyiokLvnM
 
 <!-- truncate -->
 
@@ -38,8 +40,32 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Progressively Enhanced WebGL Lens Refraction](https://tympanus.net/codrops/2023/10/10/progressively-enhanced-webgl-lens-refraction/)
+- [Why I love Remix, And why you should too](https://alemtuzlak.hashnode.dev/why-i-love-remix)
+- [Access the Loader Data in Remix](https://sergiodxa.com/tutorials/access-loaders-data-in-remix)
+- [UI Composition](https://kyleshevlin.com/ui-composition)
+- [Remix PR - Add experimental Vite support](https://github.com/remix-run/remix/pull/7590)
+- [Remix PR - Add startViewTransition support](https://github.com/remix-run/react-router/pull/10916)
+- Next.js bind https://github.com/vercel/next.js/pull/56164 https://nextjs.org/docs/app/api-reference/functions/server-actions#binding-arguments
+- [@lit/react](https://www.npmjs.com/package/@lit/react) + https://twitter.com/buildWithLit/status/1711442758052045047
+- [Making React Apps Memory Efficient | Million.js Beyond Speed](https://dev.to/ricardonunezio/millionjs-beyond-speed-making-react-apps-memory-efficient-2amn)
+- [Test your React Libraries Locally with Yalc](https://www.propelauth.com/post/test-your-react-libraries-with-yalc)
+- [Why we still use React HOCs](https://www.propelauth.com/post/why-we-have-both-react-hooks-and-hocs)
+- [ServerComponents.dev](https://servercomponents.dev/) + https://twitter.com/ricardonunez_io/status/1674237104430391296
+- 📅 [React Jam - October 19-29th - React devs create and play games in 10 days](https://reactjam.com/)
+- [next-safe-action v4 - Typesafe Server Actions in your Next.js 13 app](https://next-safe-action.dev/)
+- Starlight 0.11 Component Overrides https://twitter.com/astrodotbuild/status/1711391413630329009
+- [Persisting and restoring state in XState](https://stately.ai/blog/2023-10-02-persisting-state) ? + https://stately.ai/blog/2023-10-05-what-is-a-state-machine ?
+- stackblitz viteconf ? https://twitter.com/stackblitz/status/1709957710983422172
+- revive? https://twitter.com/pcattori/status/1709961832335638905
+- flushsync https://twitter.com/ryanflorence/status/1710000218543096230
+- Upgraded Storybook new: https://twitter.com/storybookjs/status/1710296779625824394
+- [Server-side pagination with Remix](https://www.jacobparis.com/content/remix-pagination)
+- RQ v5 RC5: https://twitter.com/TkDodo/status/1711297673934848388 rc6 https://twitter.com/TkDodo/status/1711635656642855297
+- Advanced React with TS: https://twitter.com/mattpocockuk/status/1711399409601089793
+- Drei renderCubeTexture: https://twitter.com/0xca0a/status/1711018443850318192
 
+- [What's new in Remotion – September 2023](https://www.youtube.com/watch?v=Ol-571DOPDY)
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
 - 👥 React Advanced (Londres 🇬🇧, 20-23 Octobre) nous offre -10% - code "REACT10"
 
@@ -57,14 +83,10 @@ Clerk is the easiest way to add authentication and user management to your React
 
 With Clerk you get:
 
-*   💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations
-    
-*   📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
-    
-*   ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
-    
-*   🎁 User management, social login, magic links, MFA, and more out of the box
-    
+- 💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations
+- 📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
+- ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
+- 🎁 User management, social login, magic links, MFA, and more out of the box
 
 Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/quickstarts/overview?utm_source=sponsorship&utm_medium=newsletter&utm_campaign=thisweekinreact&utm_term=08_08_2023) 🚀
 
@@ -72,7 +94,20 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [React-Native-Radio 277 - Expo Launch Party](https://reactnativeradio.com/episodes/rnr-277-expo-launch-party)
+- [react-native-fast-text](https://github.com/peterpme/react-native-fast-text) + rn-optimize ? https://twitter.com/peterpme/status/1707983667627446497
+- Apple debugging universal links https://twitter.com/Baconbrix/status/1709615555286851817
+- [React-Native v0.73 RC1](https://github.com/facebook/react-native/releases/tag/v0.73.0-rc.1) https://twitter.com/titozzz/status/1709594438568214660 + https://twitter.com/satya164/status/1709603351132770557
+- 0.73 one click debugging https://twitter.com/SzymonRybczak/status/1709844650398241123
+- expo prebuilt? https://twitter.com/expo/status/1709972722170605669
+- nativewind v4? https://twitter.com/mark__lawlor/status/1710063049271279917
+- vxrn, rn on vite: https://twitter.com/natebirdman/status/1710084813179474106
+- expo docs update: https://twitter.com/amanhimself/status/1710254359274037263
+- [Remote controls for React TV apps: a declarative approach with react-tv-space-navigation 1.0!](https://www.bam.tech/article/handling-remote-controls-in-tv-apps-the-react-way-with-react-tv-space-navigation-1-0)
+- [react-tv-space-navigation](https://github.com/bamlab/react-tv-space-navigation)
+- [vision-camera 3.3 - QR-code/Barcode scanner](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.3.0)
+- [vision-camera-barcode-scanner](https://github.com/mgcrea/vision-camera-barcode-scanner)
+- [What’s the Best React Native Storage Option?](https://www.youtube.com/watch?v=wVNPmxntwKQ)
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
 
@@ -80,7 +115,10 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
+- [Du code et du cash - Vivre de sa newsletter React - #2 Sebastien Lorber](https://podcasters.spotify.com/pod/show/du-code-et-du-cash/episodes/Vivre-de-sa-newsletter-React---2-Sebastien-Lorber-e2a9unj)
+- [React va disparaitre?](https://www.youtube.com/watch?v=bwpyiokLvnM)
+- [React : Composants Serveur vs SSR](https://www.youtube.com/watch?v=pKwRMnRbWww)
+- [Optimiser la performance de votre site web avec les Core Web Vitals](https://www.lauthieb.dev/blog/core-web-vitals)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -96,13 +134,34 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- valibot https://twitter.com/FabianHiller/status/1710000480938496195
+- [Japa v3 - Testing framework for Node.js](https://japa.dev/)
+- [Speeding up the JavaScript ecosystem - The barrel file debacle](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-7/) https://twitter.com/marvinhagemeist/status/1711052799474061620
+- Autoresizing text css https://twitter.com/jh3yy/status/1710398436917321799
+- prisma serverless db drivers: https://twitter.com/prisma/status/1710281453630628176 https://twitter.com/prisma/status/1709629458414461213
+- Rolldown bundler, Rollup in rust https://twitter.com/rspack_dev/status/1710144139697021438 https://twitter.com/youyuxi/status/1709943106215530867
+- [An Interactive Intro to CRDTs](https://jakelazaroff.com/words/an-interactive-intro-to-crdts/)
+- [Limit the reach of your selectors with the CSS @scope at-rule](https://developer.chrome.com/articles/at-scope/)
+- [Solid 1.8](https://github.com/solidjs/solid/releases/tag/v1.8.0)
+- [Strong static typing, a hill I'm willing to die on...](https://www.svix.com/blog/strong-typing-hill-to-die-on/)
+- [Photoshop is now on the web!](https://medium.com/@addyosmani/photoshop-is-now-on-the-web-38d70954365a)
+- [Write your own Zod](https://zackoverflow.dev/writing/write-your-own-zod)
+- [ViteConf 2023 Replay](https://viteconf.org/23/replay)
+- [ESLint Flat config rollout plans - By default in v9](https://eslint.org/blog/2023/10/flat-config-rollout-plans/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/Hacksore/status/1710826658863702314
+
+https://twitter.com/JNYBGR/status/1709967646945317090
+
+https://twitter.com/thekitze/status/1709581811033026977
+
+https://twitter.com/thekitze/status/1711643097363333537
+
+https://twitter.com/thekitze/status/1711634368366510391
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
