--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
@@ -67,7 +67,7 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 - [What's new in Remotion – September 2023](https://www.youtube.com/watch?v=Ol-571DOPDY)
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
-- 👥 React Advanced (Londres 🇬🇧, 20-23 Octobre) nous offre -10% - code "REACT10"
+- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <SubscribeFormEmbed placement="middle" />
 
