--- a/website/newsletter/162/index.mdx
+++ b/website/newsletter/162/index.mdx
@@ -41,7 +41,7 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 <Todo />
 
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
-- 👥 React Advanced (London 🇬🇧, Octobre 20-23) is offering us -10% - code "REACT10"
+- 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, Octobre 20-23) is offering us [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -57,14 +57,13 @@ Clerk is the easiest way to add authentication and user management to your React
 
 With Clerk you get:
 
-*   💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations
-    
-*   📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
-    
-*   ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
-    
-*   🎁 User management, social login, magic links, MFA, and more out of the box
-    
+- 💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations
+
+- 📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
+
+- ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
+
+- 🎁 User management, social login, magic links, MFA, and more out of the box
 
 Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/quickstarts/overview?utm_source=sponsorship&utm_medium=newsletter&utm_campaign=thisweekinreact&utm_term=08_08_2023) 🚀
 
