--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
@@ -40,23 +40,15 @@ It is super easy to install in your favorite framework: [React.js,](https://www
 
 ## ⚛️ React {#react}
 
-- 📦 [@lit/react](https://www.npmjs.com/package/@lit/react)
+[![Lit React v1.0](/emails/issues/162/lit.jpg)](https://www.npmjs.com/package/@lit/react)
 
-Graduating package
+[**Lit React v1.0**](https://www.npmjs.com/package/@lit/react)
 
-500k dl/month
+Le framework Web Components de Google [Lit vient de sortir en v3.0](https://lit.dev/blog/2023-10-10-lit-3.0/). En dehors des améliorations du framework (decorators, template compiler, Preact Signals), on retrouve en particulier la graduation du package d'intégration `@lit/react` qui sort du Lab, devient stable et sort en v1.0.
 
-- https://twitter.com/buildWithLit/status/1711442758052045047 + React 18 difficulties (setting properties on elements, adding event listeners to custom events, add type informations)
+Cette intégration facilite l'usage des Web Components dans une app React (ou Preact) en créant un wrapper qui va mapper les props React sur les properties de l'élément cible, gérer les event handlers et faciliter le typage TypeScript. Elle comble certaines lacunes de React 18 qui ne s'intègre pas facilement avec les Web Components: les props sont mappées sur des attributs et non des properties. Voir la [documentation pour le framework React](https://lit.dev/docs/frameworks/react/).
 
-https://lit.dev/docs/frameworks/react/
-
-> "​it won't actually SSR the underlying web component without Lit's SSR... however, there is Next.js integration so this is happening"
-
-lit/ssr package?
-https://lit.dev/docs/ssr/overview/
-Next.js https://github.com/lit/lit/issues/2391
-
-https://github.com/lit/lit/tree/main/packages/labs/nextjs
+Mais est-ce qu'un dev React moderne peut facilement utiliser tout ça? Lit propose des packages expérimentaux [@lit-labs/ssr](https://www.npmjs.com/package/@lit-labs/ssr), [@lit-labs/ssr-react](https://www.npmjs.com/package/@lit-labs/ssr-react) et [@lit-labs/nextjs](https://www.npmjs.com/package/@lit-labs/nextjs) mais le support est limité et ne marchera pas avec Next.js App Router. Le [Declarative Shadow DOM](https://developer.chrome.com/articles/declarative-shadow-dom/), qui permet le SSR, n'est pas encore implémenté dans Firefox, mais un polyfill existe. Bref, Lit devrait bien fonctionner sur une app CRA, mais semble encore un peu risqué si vous avez besoin de SSR et SEO.
 
 ---
 
@@ -74,6 +66,7 @@ https://github.com/lit/lit/tree/main/packages/labs/nextjs
 - 📜 [Test your React Libraries Locally with Yalc](https://www.propelauth.com/post/test-your-react-libraries-with-yalc)
 - 📜 [Why we still use React HOCs](https://www.propelauth.com/post/why-we-have-both-react-hooks-and-hocs)
 - 📅 [React Jam - October 19-29th - React devs create and play games in 10 days](https://reactjam.com/)
+- 📦 [Fresh v1.5 - Partials, client side navigation and more](https://deno.com/blog/fresh-1.5)
 - 📦 [next-safe-action v4 - Typesafe Server Actions in your Next.js 13 app](https://next-safe-action.dev/)
 - 📦 [Astro Starlight v0.11](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.11.0): ajoute le support des [component overrides](https://starlight.astro.build/guides/overriding-components/) https://twitter.com/astrodotbuild/status/1711391413630329009
 - stackblitz viteconf ? https://twitter.com/stackblitz/status/1709957710983422172
@@ -107,8 +100,15 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 ## 📱 React-Native {#react-native}
 
+[Using RCTView & RCTText in React Native for Performance Gains](https://blog.theodo.com/2023/10/native-views-rn-performance/)
+
+https://twitter.com/mo__javad/status/1711784849067966585
+
+---
+
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
 - 🎙️ [React-Native-Radio 277 - Expo Launch Party](https://reactnativeradio.com/episodes/rnr-277-expo-launch-party)
+- 🎙 [The React Native Show Podcast 28 - Improving Developer Experience with Expo](https://www.youtube.com/watch?v=4PPDAvgfLHk)
 - 📦 [react-native-fast-text](https://github.com/peterpme/react-native-fast-text) + rn-optimize ? https://twitter.com/peterpme/status/1707983667627446497
 - 🔗 Apple debugging universal links https://twitter.com/Baconbrix/status/1709615555286851817
 - 📦 [React-Native v0.73 RC1](https://github.com/facebook/react-native/releases/tag/v0.73.0-rc.1) https://twitter.com/titozzz/status/1709594438568214660 + https://twitter.com/satya164/status/1709603351132770557
@@ -121,7 +121,10 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 - 📦 [react-tv-space-navigation](https://github.com/bamlab/react-tv-space-navigation)
 - 📦 [vision-camera 3.3 - QR-code/Barcode scanner](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.3.0)
 - 📦 [vision-camera-barcode-scanner](https://github.com/mgcrea/vision-camera-barcode-scanner)
+- 🎥 [William Candillon - Back to the Web](https://www.youtube.com/watch?v=3p3NI1yIgcM)
 - 🎥 [What’s the Best React Native Storage Option?](https://www.youtube.com/watch?v=wVNPmxntwKQ)
+
+- 📦 [Create-Expo-Stack CLI](https://expostack.dev/) https://twitter.com/DanStepanov/status/1711881578295726149
 
 ---
 
@@ -136,7 +139,7 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 [![À l'abordage de React](/emails/issues/160/a-l-abordage-de-react.jpg)](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-27092023)
 
-💸 **[🚀 Formation React approfondie et 100% FR (pré-vente) !](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-27092023)**
+**[🚀 Formation React approfondie et 100% FR (pré-vente) !](https://react.codingcrew.dev/?utm_source=thisweekinreact&utm_id=twir-27092023)**
 
 Découvrez "À l'abordage de React" en pré-vente dès la semaine prochaine, avec les deux premiers modules et un **accès à vie** aux autres modules lorsqu'ils sortiront.
 
