--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/162/index.mdx
@@ -53,9 +53,9 @@ Mais est-ce qu'un dev React moderne peut facilement utiliser tout ça? Lit propo
 ---
 
 - 💸 [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
-- 👀 [Remix PR - Add experimental Vite support](https://github.com/remix-run/remix/pull/7590) + https://twitter.com/pcattori/status/1709961832335638905
+- 👀 [Remix PR - Add experimental Vite support](https://github.com/remix-run/remix/pull/7590)
 - 👀 [Remix PR - Add startViewTransition support](https://github.com/remix-run/react-router/pull/10916)
-- 👀 Next.js bind https://github.com/vercel/next.js/pull/56164 https://nextjs.org/docs/app/api-reference/functions/server-actions#binding-arguments
+- 👀 [Next.js PR - Document Server Actions `.bind` method](https://github.com/vercel/next.js/pull/56164): la [doc Next.js](https://nextjs.org/docs/app/api-reference/functions/server-actions#binding-arguments) recommande maintenant d'utiliser `myAction.bind(null, myArg)` pour passer des arguments supplémentaires à une Server Action. La fonction retournée sera alors également une Server Action.
 - 📜 [Hydration, the Saboteur of Lazy Loading](https://www.builder.io/blog/hydration-sabotages-lazy-loading)
 - 📜 [Progressively Enhanced WebGL Lens Refraction](https://tympanus.net/codrops/2023/10/10/progressively-enhanced-webgl-lens-refraction/)
 - 📜 [Why I love Remix, And why you should too](https://alemtuzlak.hashnode.dev/why-i-love-remix)
@@ -69,9 +69,8 @@ Mais est-ce qu'un dev React moderne peut facilement utiliser tout ça? Lit propo
 - 📦 [Fresh v1.5 - Partials, client side navigation and more](https://deno.com/blog/fresh-1.5)
 - 📦 [next-safe-action v4 - Typesafe Server Actions in your Next.js 13 app](https://next-safe-action.dev/)
 - 📦 [Astro Starlight v0.11](https://github.com/withastro/starlight/releases/tag/%40astrojs%2Fstarlight%400.11.0): ajoute le support des [component overrides](https://starlight.astro.build/guides/overriding-components/) https://twitter.com/astrodotbuild/status/1711391413630329009
-- stackblitz viteconf ? https://twitter.com/stackblitz/status/1709957710983422172
-- 📦 RQ v5 RC5: https://twitter.com/TkDodo/status/1711297673934848388 rc6 https://twitter.com/TkDodo/status/1711635656642855297
-- 🔗 [ServerComponents.dev](https://servercomponents.dev/) + https://twitter.com/ricardonunez_io/status/1674237104430391296
+- 📦 [React-Query 5.0.0 RC.10](https://github.com/TanStack/query/releases/tag/v5.0.0-rc.10): les dernières RCs apportent des améliorations notables [🐦 devtools](https://twitter.com/TkDodo/status/1711297673934848388) et [🐦 TypeScript](https://twitter.com/TkDodo/status/1711635656642855297).
+- 🔗 [ServerComponents.dev](https://servercomponents.dev/): une resource interactive sympa pour en savoir plus sur les Server Components.
 - 🎥 [What's new in Remotion – September 2023](https://www.youtube.com/watch?v=Ol-571DOPDY)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
@@ -104,27 +103,24 @@ Get started with Clerk’s [quickstarts and tutorials](https://clerk.com/docs/qu
 
 https://twitter.com/mo__javad/status/1711784849067966585
 
+- 📦 [react-native-fast-text](https://github.com/peterpme/react-native-fast-text) + rn-optimize ? https://twitter.com/peterpme/status/1707983667627446497
+
 ---
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
-- 🎙️ [React-Native-Radio 277 - Expo Launch Party](https://reactnativeradio.com/episodes/rnr-277-expo-launch-party)
-- 🎙 [The React Native Show Podcast 28 - Improving Developer Experience with Expo](https://www.youtube.com/watch?v=4PPDAvgfLHk)
-- 📦 [react-native-fast-text](https://github.com/peterpme/react-native-fast-text) + rn-optimize ? https://twitter.com/peterpme/status/1707983667627446497
-- 🔗 Apple debugging universal links https://twitter.com/Baconbrix/status/1709615555286851817
-- 📦 [React-Native v0.73 RC1](https://github.com/facebook/react-native/releases/tag/v0.73.0-rc.1) https://twitter.com/titozzz/status/1709594438568214660 + https://twitter.com/satya164/status/1709603351132770557
-- 0.73 one click debugging https://twitter.com/SzymonRybczak/status/1709844650398241123
-- expo prebuilt? https://twitter.com/expo/status/1709972722170605669
+- 🐦 [Expo docs updates - Bun, local dev...](https://twitter.com/amanhimself/status/1710254359274037263)
 - nativewind v4? https://twitter.com/mark__lawlor/status/1710063049271279917
-- vxrn, rn on vite: https://twitter.com/natebirdman/status/1710084813179474106
-- expo docs update: https://twitter.com/amanhimself/status/1710254359274037263
+- 📦 [vxrn - The magic of Vite, meet React Native](https://vxrn.dev/): nouveau projet expérimental qui propose d'utiliser Vite pour le développement cross-platform web/mobile, à l'instar d'Expo qui mise sur Metro. https://twitter.com/natebirdman/status/1710084813179474106
 - 📜 [Remote controls for React TV apps: a declarative approach with react-tv-space-navigation 1.0!](https://www.bam.tech/article/handling-remote-controls-in-tv-apps-the-react-way-with-react-tv-space-navigation-1-0)
+- 📦 [React-Native v0.73 RC.2](https://github.com/facebook/react-native/releases/tag/v0.73.0-rc.2): la v0.73 vient de passer en RC. Il faudra regarder la [🎥 Keynote React-Native-EU](https://www.youtube.com/watch?v=-rCRgbsJumk) pour connaitre les highlights. On y trouve entre autre one-click debug flow ([🐦 demo](https://twitter.com/SzymonRybczak/status/1709844650398241123)) et stable symlinks support!
 - 📦 [react-tv-space-navigation](https://github.com/bamlab/react-tv-space-navigation)
 - 📦 [vision-camera 3.3 - QR-code/Barcode scanner](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.3.0)
 - 📦 [vision-camera-barcode-scanner](https://github.com/mgcrea/vision-camera-barcode-scanner)
+- 📦 [Create-Expo-Stack CLI v2](https://expostack.dev/) https://twitter.com/DanStepanov/status/1711881578295726149
 - 🎥 [William Candillon - Back to the Web](https://www.youtube.com/watch?v=3p3NI1yIgcM)
 - 🎥 [What’s the Best React Native Storage Option?](https://www.youtube.com/watch?v=wVNPmxntwKQ)
-
-- 📦 [Create-Expo-Stack CLI](https://expostack.dev/) https://twitter.com/DanStepanov/status/1711881578295726149
+- 🎙️ [React-Native-Radio 277 - Expo Launch Party](https://reactnativeradio.com/episodes/rnr-277-expo-launch-party)
+- 🎙 [The React Native Show Podcast 28 - Improving Developer Experience with Expo](https://www.youtube.com/watch?v=4PPDAvgfLHk)
 
 ---
 
